[gd_scene load_steps=43 format=3 uid="uid://cjybbal1tv5f0"]

[ext_resource type="Script" uid="uid://nsxm1ap3uiwk" path="res://ui/ui/introduction.gd" id="1_kfe66"]
[ext_resource type="Texture2D" uid="uid://bmgbihu2uyue4" path="res://assets/静态背景2/背景颜色.png" id="2_je7el"]
[ext_resource type="Texture2D" uid="uid://2x5n8y08dlcy" path="res://assets/静态背景2/破败墙壁.png" id="3_nb47s"]
[ext_resource type="Texture2D" uid="uid://dw8acjjw5wsgf" path="res://assets/界面基础物件.png" id="4_su6op"]
[ext_resource type="Texture2D" uid="uid://brnp7xflfi5db" path="res://assets/静态背景2/窗户.png" id="5_0l870"]
[ext_resource type="Texture2D" uid="uid://bdg2hoiriwe6x" path="res://assets/静态背景2/窗外风景.png" id="6_ejrfm"]
[ext_resource type="Texture2D" uid="uid://4ie6hus8sqk2" path="res://assets/静态背景2/主界面组件1.png" id="7_uv8lv"]
[ext_resource type="Texture2D" uid="uid://ch62os7jjhb3q" path="res://assets/静态背景2/主界面组件.png" id="8_86htv"]
[ext_resource type="Texture2D" uid="uid://chhfxdqba1yld" path="res://assets/静态背景2/蜘蛛网.png" id="9_pgyv4"]
[ext_resource type="Texture2D" uid="uid://qhaefl5gsrgi" path="res://assets/静态背景2/小蜘蛛.png" id="10_1cine"]
[ext_resource type="Texture2D" uid="uid://vwqelaykqefb" path="res://assets/静态物品/药水1.png" id="11_gjha2"]
[ext_resource type="Texture2D" uid="uid://b858bp5gy5cqf" path="res://assets/静态物品/药水2.png" id="12_t6mjd"]
[ext_resource type="Texture2D" uid="uid://bxcs7fsx840fo" path="res://assets/静态物品/药水3.png" id="13_55pyt"]
[ext_resource type="Texture2D" uid="uid://dl8ewamino2y4" path="res://assets/静态物品/药水4.png" id="14_g2fst"]
[ext_resource type="Texture2D" uid="uid://c03vsk24jgj7n" path="res://assets/静态物品/烛台.png" id="15_ou3up"]
[ext_resource type="Texture2D" uid="uid://brqsx3gqu7n82" path="res://assets/静态背景2/绿藤蔓.png" id="16_0b6vh"]
[ext_resource type="Texture2D" uid="uid://bmq0hpm814lys" path="res://assets/静态物品/药瓶5.png" id="17_tnqcw"]
[ext_resource type="Texture2D" uid="uid://djdy5tyhy1bwl" path="res://assets/静态物品/空罐子.png" id="18_ywy3b"]
[ext_resource type="Texture2D" uid="uid://0xgtki4omfkd" path="res://assets/静态背景2/瓶子7.png" id="19_gboqk"]
[ext_resource type="Texture2D" uid="uid://bk5vn7gw4qv17" path="res://assets/静态背景2/捣药台.png" id="20_iwa3i"]
[ext_resource type="Texture2D" uid="uid://cn1kqvlqb4f1m" path="res://assets/静态背景2/瓶子8.png" id="21_ht06a"]
[ext_resource type="Texture2D" uid="uid://bbrfjg0es4bqr" path="res://assets/静态背景2/瓶子10.png" id="22_kepof"]
[ext_resource type="Texture2D" uid="uid://cljp2istngd2x" path="res://assets/静态背景2/瓶子9.png" id="23_mu8r3"]
[ext_resource type="Texture2D" uid="uid://tyl2ko7rk6y8" path="res://assets/静态背景2/鸟头骨.png" id="24_8wj7h"]
[ext_resource type="Texture2D" uid="uid://ctb6ig6op3grv" path="res://assets/静态物品/书架.png" id="25_f8jcx"]
[ext_resource type="Texture2D" uid="uid://vcc4j7w5etjw" path="res://assets/静态物品/红水晶.png" id="26_k28t2"]
[ext_resource type="Texture2D" uid="uid://cn7jkbw4k8e31" path="res://assets/静态物品/水晶球.png" id="27_wx6t7"]
[ext_resource type="Texture2D" uid="uid://cs58wssb0d5m1" path="res://assets/静态背景2/书本.png" id="28_cbula"]
[ext_resource type="Texture2D" uid="uid://21rynewon3io" path="res://assets/静态物品/药瓶6.png" id="29_05wjr"]
[ext_resource type="Texture2D" uid="uid://dyr7tnkoa8aky" path="res://assets/静态物品/眼球.png" id="30_3oq0k"]
[ext_resource type="Texture2D" uid="uid://diomgkmc67ve8" path="res://assets/静态物品/章鱼触手.png" id="31_15jhx"]
[ext_resource type="Texture2D" uid="uid://bw7cbvixbj6dw" path="res://assets/静态背景2/坩埚atlas/坩埚01.png" id="32_m33w2"]
[ext_resource type="Texture2D" uid="uid://dffwgpwjigi11" path="res://assets/静态背景2/女巫背身.png" id="33_ywif0"]
[ext_resource type="Texture2D" uid="uid://ke1a6qh1kejq" path="res://assets/静态背景2/书.png" id="34_vwni7"]
[ext_resource type="SpriteFrames" uid="uid://dth2yyhahtcmn" path="res://assets/animations/pot.tres" id="35_mmy5h"]
[ext_resource type="Texture2D" uid="uid://dpt8oxb68a4bt" path="res://assets/静态背景2/迸发星光atlas/迸发星光-Sheet.png" id="36_lo4cj"]
[ext_resource type="Texture2D" uid="uid://cm0tyeuk33f8e" path="res://assets/静态背景2/爆炸.png" id="37_wu6df"]
[ext_resource type="AudioStream" uid="uid://e562efstsp58" path="res://assets/free/小爆炸.mp3" id="38_nfdi7"]
[ext_resource type="Texture2D" uid="uid://4fh2exyvexca" path="res://assets/静态物品/小幽灵.png" id="39_1s0f6"]

[sub_resource type="Animation" id="Animation_m15re"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D4:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0v4ec"]
resource_name = "spark"
length = 5.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 9, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 9, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D4:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 9, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 9, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m15re"]
_data = {
&"RESET": SubResource("Animation_m15re"),
&"spark": SubResource("Animation_0v4ec")
}

[node name="IUi" type="CanvasLayer"]
script = ExtResource("1_kfe66")
metadata/_custom_type_script = "uid://bpkvp0l3wxrx1"

[node name="Introduction" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroComponents" type="Control" parent="Introduction"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="BackGround" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_right = 959.0
offset_bottom = 540.0
texture = ExtResource("2_je7el")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="WallCraps" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("3_nb47s")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Basic" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("4_su6op")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Window" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_left = 132.0
offset_right = 828.0
offset_bottom = 550.0
texture = ExtResource("5_0l870")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="SceneOutside" type="TextureRect" parent="Introduction/IntroComponents/Window"]
layout_mode = 0
offset_left = -125.0
offset_top = -2.0
offset_right = 831.0
offset_bottom = 571.0
texture = ExtResource("6_ejrfm")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component1" type="TextureRect" parent="Introduction/IntroComponents/Window"]
layout_mode = 0
offset_left = -132.0
offset_right = 826.0
offset_bottom = 542.0
texture = ExtResource("7_uv8lv")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component2" type="TextureRect" parent="Introduction/IntroComponents/Window"]
layout_mode = 0
offset_left = -132.0
offset_right = 826.0
offset_bottom = 542.0
texture = ExtResource("8_86htv")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="SpidersNet" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("9_pgyv4")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Spider" type="TextureRect" parent="Introduction/IntroComponents/SpidersNet"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("10_1cine")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottles" type="Control" parent="Introduction/IntroComponents"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Bottle1" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 788.0
offset_top = 58.0
offset_right = 844.0
offset_bottom = 132.0
texture = ExtResource("11_gjha2")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle2" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 80.0
offset_top = 292.0
offset_right = 129.0
offset_bottom = 359.0
texture = ExtResource("12_t6mjd")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle3" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 42.0
offset_top = 291.0
offset_right = 121.0
offset_bottom = 384.0
texture = ExtResource("13_55pyt")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle4" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 93.0
offset_top = 235.0
offset_right = 252.0
offset_bottom = 373.0
texture = ExtResource("14_g2fst")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle22" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 702.0
offset_top = 306.0
offset_right = 763.0
offset_bottom = 371.0
texture = ExtResource("14_g2fst")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle8" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 312.0
offset_top = 53.0
offset_right = 372.0
offset_bottom = 153.0
texture = ExtResource("15_ou3up")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle26" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 69.0
offset_top = -6.0
offset_right = 822.0
offset_bottom = 535.0
texture = ExtResource("16_0b6vh")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle27" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = -300.0
offset_top = -2.0
offset_right = 453.0
offset_bottom = 539.0
texture = ExtResource("16_0b6vh")
stretch_mode = 6
flip_h = true
metadata/_edit_lock_ = true

[node name="Bottle28" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = -138.0
offset_top = -3.0
offset_right = 342.0
offset_bottom = 307.0
texture = ExtResource("16_0b6vh")
stretch_mode = 6
flip_h = true
metadata/_edit_lock_ = true

[node name="Bottle21" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 617.0
offset_top = 256.0
offset_right = 677.0
offset_bottom = 356.0
texture = ExtResource("15_ou3up")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle5" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 187.0
offset_top = 287.0
offset_right = 284.0
offset_bottom = 390.0
texture = ExtResource("17_tnqcw")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle15" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 632.0
offset_top = 278.0
offset_right = 729.0
offset_bottom = 381.0
texture = ExtResource("18_ywy3b")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle16" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 683.0
offset_top = 336.0
offset_right = 742.0
offset_bottom = 387.0
texture = ExtResource("18_ywy3b")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle17" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 714.0
offset_top = 241.0
offset_right = 863.0
offset_bottom = 379.0
texture = ExtResource("19_gboqk")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle24" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 807.0
offset_top = 239.0
offset_right = 1001.0
offset_bottom = 431.0
texture = ExtResource("20_iwa3i")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle18" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 770.0
offset_top = 288.0
offset_right = 851.0
offset_bottom = 387.0
texture = ExtResource("21_ht06a")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle20" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 794.0
offset_top = 261.0
offset_right = 902.0
offset_bottom = 394.0
texture = ExtResource("22_kepof")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle19" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 231.0
offset_top = 272.0
offset_right = 328.0
offset_bottom = 387.0
texture = ExtResource("23_mu8r3")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle25" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 168.0
offset_top = 320.0
offset_right = 328.0
offset_bottom = 480.0
texture = ExtResource("24_8wj7h")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle10" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 285.0
offset_top = 241.0
offset_right = 442.0
offset_bottom = 376.0
texture = ExtResource("25_f8jcx")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle11" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 879.0
offset_top = 43.0
offset_right = 952.0
offset_bottom = 137.0
texture = ExtResource("25_f8jcx")
stretch_mode = 6
flip_h = true
metadata/_edit_lock_ = true

[node name="Bottle9" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 820.0
offset_top = 84.0
offset_right = 868.0
offset_bottom = 138.0
rotation = -0.439459
texture = ExtResource("26_k28t2")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle7" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 99.0
offset_top = 304.0
offset_right = 194.0
offset_bottom = 387.0
texture = ExtResource("27_wx6t7")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle23" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 690.0
offset_top = 328.0
offset_right = 862.0
offset_bottom = 497.0
texture = ExtResource("28_cbula")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle6" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 74.0
offset_top = 334.0
offset_right = 136.0
offset_bottom = 398.0
texture = ExtResource("29_05wjr")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle12" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 666.0
offset_top = 420.0
offset_right = 713.0
offset_bottom = 464.0
rotation = -1.48876
texture = ExtResource("30_3oq0k")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bottle14" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 907.0
offset_top = 52.0
offset_right = 954.0
offset_bottom = 96.0
rotation = -1.46804
texture = ExtResource("30_3oq0k")
stretch_mode = 6
flip_h = true
metadata/_edit_lock_ = true

[node name="Bottle13" type="TextureRect" parent="Introduction/IntroComponents/Bottles"]
layout_mode = 0
offset_left = 862.0
offset_top = 24.0
offset_right = 894.0
offset_bottom = 62.0
rotation = -0.699884
texture = ExtResource("31_15jhx")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide0" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_left = 347.0
offset_top = 297.0
offset_right = 610.0
offset_bottom = 455.0
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="坩埚01" type="Sprite2D" parent="Introduction/IntroComponents/Slide0"]
position = Vector2(147, 37)
scale = Vector2(4.91797, 4.68945)
texture = ExtResource("32_m33w2")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Introduction/IntroComponents/Slide0"]
layout_mode = 0
offset_left = -347.0
offset_top = -297.0
offset_right = 624.0
offset_bottom = 252.0
color = Color(0.863862, 0.604842, 0.209023, 0.384314)

[node name="Witch" type="TextureRect" parent="Introduction/IntroComponents/Slide0"]
layout_mode = 0
offset_left = -298.0
offset_top = -292.0
offset_right = 660.0
offset_bottom = 250.0
texture = ExtResource("33_ywif0")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Dyt2" type="TextureRect" parent="Introduction/IntroComponents/Slide0/Witch"]
layout_mode = 0
offset_left = 304.0
offset_top = 147.0
offset_right = 435.0
offset_bottom = 331.0
texture = ExtResource("34_vwni7")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide1" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_left = 226.0
offset_top = 273.0
offset_right = 705.0
offset_bottom = 544.0
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="坩埚01" type="AnimatedSprite2D" parent="Introduction/IntroComponents/Slide1"]
position = Vector2(246, 12)
rotation = 0.0637932
scale = Vector2(5.53711, 5.68848)
sprite_frames = ExtResource("35_mmy5h")
animation = &"Idle"
frame_progress = 0.585225
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Introduction/IntroComponents/Slide1"]
libraries = {
&"": SubResource("AnimationLibrary_m15re")
}

[node name="Sprite2D" type="Sprite2D" parent="Introduction/IntroComponents/Slide1"]
position = Vector2(179, -92)
texture = ExtResource("36_lo4cj")
hframes = 4
vframes = 3

[node name="Sprite2D2" type="Sprite2D" parent="Introduction/IntroComponents/Slide1"]
position = Vector2(195, -55)
rotation = 0.733027
scale = Vector2(4, 4)
texture = ExtResource("36_lo4cj")
offset = Vector2(-38.5, 15.5)
hframes = 4
vframes = 3

[node name="Sprite2D3" type="Sprite2D" parent="Introduction/IntroComponents/Slide1"]
position = Vector2(466, 39)
rotation = 0.0303272
scale = Vector2(4, 4)
texture = ExtResource("36_lo4cj")
flip_h = true
hframes = 4
vframes = 3

[node name="Sprite2D4" type="Sprite2D" parent="Introduction/IntroComponents/Slide1"]
position = Vector2(266, -113)
texture = ExtResource("36_lo4cj")
hframes = 4
vframes = 3

[node name="Slide2" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_left = 226.0
offset_top = 273.0
offset_right = 705.0
offset_bottom = 544.0
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="坩埚01" type="AnimatedSprite2D" parent="Introduction/IntroComponents/Slide2"]
position = Vector2(255, 133)
rotation = 0.0637932
scale = Vector2(8.53459, 6.90504)
sprite_frames = ExtResource("35_mmy5h")
animation = &"Idle"
frame_progress = 0.464429
metadata/_edit_lock_ = true

[node name="Component1" type="TextureRect" parent="Introduction/IntroComponents/Slide2"]
layout_mode = 0
offset_left = -83.0
offset_top = -256.0
offset_right = 663.0
offset_bottom = 268.0
rotation = -0.0348871
texture = ExtResource("37_wu6df")
expand_mode = 1
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Introduction/IntroComponents/Slide2"]
stream = ExtResource("38_nfdi7")

[node name="Slide3" type="TextureRect" parent="Introduction/IntroComponents"]
layout_mode = 0
offset_left = 208.0
offset_top = 114.0
offset_right = 706.0
offset_bottom = 370.0
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="坩埚01" type="AnimatedSprite2D" parent="Introduction/IntroComponents/Slide3"]
position = Vector2(271.275, 256.103)
rotation = 0.0637932
scale = Vector2(8.98986, 6.90504)
sprite_frames = ExtResource("35_mmy5h")
animation = &"Idle"
frame_progress = 0.464429

[node name="Slide3" type="TextureRect" parent="Introduction/IntroComponents/Slide3"]
layout_mode = 0
offset_left = 118.0
offset_top = -120.0
offset_right = 616.0
offset_bottom = 136.0
rotation = 0.138264
texture = ExtResource("39_1s0f6")
stretch_mode = 6
